margin bottom fix for simon mobile

--- a/projects/simple-simon/css/simon-stylesheet.css
+++ b/projects/simple-simon/css/simon-stylesheet.css
@@ -9,7 +9,7 @@
 
 .board {
     position: relative;
-    margin: 80px auto 90px;
+    margin: 80px auto 25px;
     height: 334px;
     width: 328px;
     text-align: right;
